# desktopassist

./: CMakeLists.txt  Package.swift  commands.txt
.build/: build.db  debug.yaml
.build/arm64-apple-macosx/debug/: description.json
.build/arm64-apple-macosx/debug/MacManagerBridge.build/: module.modulemap
.build/arm64-apple-macosx/debug/MacManagerBridge.build/src/: macmanager_bridge.cpp.d
.build/arm64-apple-macosx/debug/MacManagerCore.build/: module.modulemap
.build/arm64-apple-macosx/debug/MacManagerCore.build/src/: app.cpp.d  database.cpp.d  file_manager.cpp.d
.build/arm64-apple-macosx/debug/index/store/v5/records/0E/: to_json.hpp-3B4LLKJMPRA0E
.build/arm64-apple-macosx/debug/index/store/v5/records/0I/: iterator_traits.hpp-2OI9JWD79IY0I
.build/arm64-apple-macosx/debug/index/store/v5/records/1D/: input_adapters.hpp-2S0IES7SAJU1D
.build/arm64-apple-macosx/debug/index/store/v5/records/1V/: json_ref.hpp-1CQPDJ4HEP81V
.build/arm64-apple-macosx/debug/index/store/v5/records/2F/: position_t.hpp-3RR0RSW26G72F
.build/arm64-apple-macosx/debug/index/store/v5/records/4F/: to_chars.hpp-3NL3WXX4DNB4F
.build/arm64-apple-macosx/debug/index/store/v5/units/: app.cpp.o-3DUWE62M424BN  database.cpp.o-1A250J67N65BL  file_manager.cpp.o-9O19ATIGV6Q5  macmanager_bridge.cpp.o-14BAN4LDB9D10
.swiftpm/xcode/xcuserdata/finnmcmillion.xcuserdatad/xcschemes/: xcschememanagement.plist
MacManagerBridgePackage/: README.md
MacManagerBridgePackage/Tests/MacManagerBridgePackageTests/: MacManagerBridgePackageTests.swift
frontend/Donna/Donna/: BookmarkManager.swift  ContentView.swift  DonnaApp.swift  FolderSelectView.swift  MacManagerClient.swift  MacManagerError.swift  RootView.swift
frontend/Donna/Donna.xcodeproj/: project.pbxproj
frontend/Donna/Donna.xcodeproj/project.xcworkspace/xcuserdata/finnmcmillion.xcuserdatad/: UserInterfaceState.xcuserstate
frontend/Donna/DonnaTests/: DonnaTests.swift
frontend/Donna/DonnaUITests/: DonnaUITests.swift  DonnaUITestsLaunchTests.swift
frontend/MacAssist/MacAssist/: ContentView.swift  MacAssistApp.swift  MacManagerClient.swift
frontend/MacAssist/MacAssist.xcodeproj/: project.pbxproj
frontend/MacAssist/MacAssist.xcodeproj/project.xcworkspace/xcuserdata/finnmcmillion.xcuserdatad/: UserInterfaceState.xcuserstate
frontend/MacAssist/MacAssist.xcodeproj/xcuserdata/finnmcmillion.xcuserdatad/xcschemes/: xcschememanagement.plist
frontend/MacAssist/MacAssistTests/: MacAssistTests.swift
frontend/MacAssist/MacAssistUITests/: MacAssistUITests.swift  MacAssistUITestsLaunchTests.swift
frontend/MacAssistApp/MacAssistApp/: ContentView.swift  MacAssistAppApp.swift  MacManager.swift
frontend/MacAssistApp/MacAssistApp.xcodeproj/: project.pbxproj
frontend/MacAssistApp/MacAssistApp.xcodeproj/project.xcworkspace/xcuserdata/finnmcmillion.xcuserdatad/: UserInterfaceState.xcuserstate
frontend/MacAssistApp/MacAssistApp.xcodeproj/xcuserdata/finnmcmillion.xcuserdatad/xcschemes/: xcschememanagement.plist
frontend/MacAssistApp/MacAssistAppTests/: MacAssistAppTests.swift
frontend/MacAssistApp/MacAssistAppUITests/: MacAssistAppUITests.swift  MacAssistAppUITestsLaunchTests.swift
macmanager/: .gitignore
macmanager/bridge/: CMakeLists.txt
macmanager/bridge/include/: macmanager_bridge.h
macmanager/bridge/src/: macmanager_bridge.cpp
macmanager/core/: CMakeLists.txt
macmanager/core/include/: file_manager.h  run_app.h
macmanager/core/src/: MacManager.cpp  app.cpp  database.cpp  file_manager.cpp
tools/cli/: CMakeLists.txt  main.cpp
(+58 files in other folders)
